# sim-lang

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  serverless.yml  setup.py
.github/workflows/: deploy.yml
docker/: entry.sh
sim_lang/: exception_handler.py  run.py
sim_lang/language/: compiler.py  constant.py  language_definition.py  language_utils.py
sim_lang/language/execute/: calculate_unit.py  calculator.py  executor.py  simulator.py
sim_lang/test/: calculate_test.py  compiler_test.py
sim_lang/test/test_code/calculate/: basic.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test_count.py  test_ema.py  test_ewma.py  test_sma.py
src/: app.py  calculate.py  compiler.py  connection_manager.py  exception.py  executor.py  executor_manager.py  field_extractor.py  language_definition.py  language_utils.py  optimizer.py  parser.py  run.py  sql_builder.py  stock_type.py  validator.py
src/language/: compiler.py  constant.py  executor.py  executor_manager.py  language_definition.py  validator.py
src/language/enum/: optimizer.py  stock_type.py
src/language/execute/: calculate_unit.py  calculating_unit.py  calculator.py  executor.py  simulator.py
src/rdb/: connection_manager.py  sql_builder.py
src/test/: calculate_test.py  compiler_test.py  validator_test.py
src/test/test_code/calculate/: basic.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test_count.py  test_ema.py  test_ewma.py  test_sma.py
tests/: calculate_test.py  test_compiler_test.py  test_executor_test.py  validator_test.py
tests/test_code/: basic.py
