[tool.poetry]
name = "sim-lang"
version = "0.1.0"
description = "benjamin asset simulation langugage"
authors = ["Kyoodong <wind.dong.dream@gmail.com\">"]

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "^1.0.2"
pytest = "^6.2.2"
python-dotenv = "^0.15.0"
pandas = "^1.2.1"

[tool.black]
line-length = 119
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
