[tool.poetry]
name = "sim-lang"
version = "0.1.0"
description = "benjamin asset simulation langugage"
authors = ["Kyoodong <wind.dong.dream@gmail.com\">"]

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "^1.0.2"
pytest = "^6.2.2"
python-dotenv = "^0.15.0"
pandas = "^1.2.1"
anytree = "^2.8.0"
docstring-parser = "^0.7.3"
boto3 = "^1.17.27"
scikit-learn = "^0.24.1"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
