[tool.poetry]
name = "sim-lang"
version = "0.3.2"
packages = [
    { include = "sim_lang" },
]
description = "benjamin asset simulation langugage"
authors = ["Kyoodong <wind.dong.dream@gmail.com\">"]

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "^0.9.3"
pytest = "^6.2.2"
python-dotenv = "^0.15.0"
pandas = "^1.2.1"
anytree = "^2.8.0"
docstring-parser = "^0.7.3"
boto3 = "^1.17.27"
utils = { git = "https://github.com/benjamin-asset/utils.git" }


[tool.poetry.dev-dependencies]
dephell = "^0.8.3"
[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
